--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "polymarket trader"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "py-clob-client>=0.34.1",
     "python-dotenv>=1.2.1",
 ]
