--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,32 @@ jobs:
       - name: Run tests
         run: uv run pytest tests/ -v
 
+  test-pmproxy-client:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+
+      - name: Install pmproxy client
+        working-directory: proxy/client
+        run: uv sync
+
+      - name: Run pmproxy client tests
+        working-directory: proxy/client
+        env:
+          PMPROXY_URL: ${{ secrets.PMPROXY_URL }}
+        run: uv run pytest tests/ -v
+
   syntax-check:
     runs-on: ubuntu-latest
 
