--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: pmtrader
 
     steps:
       - uses: actions/checkout@v4
@@ -16,52 +19,20 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.13"
+          python-version: "3.14"
 
       - name: Install uv
         uses: astral-sh/setup-uv@v4
         with:
           version: "latest"
 
-      - name: Create virtual environment
-        run: uv venv
-
-      - name: Install dependencies from PyPI (ignore lock file)
-        run: |
-          uv pip install pytest rich python-dotenv
-        continue-on-error: true
-
-      - name: Install py-clob-client if possible
-        run: |
-          uv pip install py-clob-client || echo "py-clob-client installation failed, skipping"
-        continue-on-error: true
+      - name: Install dependencies
+        run: uv sync
 
       - name: Run tests
-        run: uv run pytest tests/ -v
-
-  test-pmproxy-client:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: proxy/client
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-
-      - name: Install dependencies
-        run: |
-          python -m venv .venv
-          .venv/bin/pip install -e ".[dev]"
-
-      - name: Run pmproxy client tests
         env:
           PMPROXY_URL: ${{ secrets.PMPROXY_URL }}
-        run: .venv/bin/pytest tests/ -v
+        run: uv run pytest tests/ -v
 
   syntax-check:
     runs-on: ubuntu-latest
@@ -72,12 +43,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.13"
+          python-version: "3.14"
 
       - name: Check Python syntax
         run: |
-          python -m py_compile $(find . -name "*.py" \
-            -not -path "./.venv/*" \
-            -not -path "./__pycache__/*" \
-            -not -path "./build/*" \
-            -not -path "./dist/*")
+          python -m py_compile $(find pmtrader -name "*.py" \
+            -not -path "*/.venv/*" \
+            -not -path "*/__pycache__/*" \
+            -not -path "*/build/*" \
+            -not -path "*/dist/*")
