--- a/pmtrader/pyproject.toml
+++ b/pmtrader/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
 ]
 
 [project.scripts]
-pmtrader-ui = "polymarket.ui.app:main"
+pmtrader-ui = "ui.app:main"
 
 [dependency-groups]
 dev = [
@@ -28,4 +28,4 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-include = ["polymarket*"]
+include = ["polymarket*", "ui*"]
