--- a/.github/workflows/publish-pmproxy.yml
+++ b/.github/workflows/publish-pmproxy.yml
@@ -9,75 +9,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-    name: Build ${{ matrix.target }}
-    runs-on: ${{ matrix.os }}
-    permissions:
-      contents: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - target: x86_64-unknown-linux-gnu
-            os: ubuntu-latest
-            artifact: pmproxy
-          - target: aarch64-unknown-linux-gnu
-            os: ubuntu-latest
-            artifact: pmproxy
-          - target: x86_64-apple-darwin
-            os: macos-latest
-            artifact: pmproxy
-          - target: aarch64-apple-darwin
-            os: macos-latest
-            artifact: pmproxy
-          - target: x86_64-pc-windows-msvc
-            os: windows-latest
-            artifact: pmproxy.exe
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
-
-      - name: Install cross-compilation tools (Linux aarch64)
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu
-
-      - name: Build binary
-        working-directory: pmproxy
-        env:
-          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
-        run: cargo build --release --target ${{ matrix.target }} --features ec2
-
-      - name: Prepare artifact (Unix)
-        if: runner.os != 'Windows'
-        run: |
-          cd pmproxy/target/${{ matrix.target }}/release
-          tar -czvf pmproxy-${{ matrix.target }}.tar.gz ${{ matrix.artifact }}
-          mv pmproxy-${{ matrix.target }}.tar.gz ../../../../
-
-      - name: Prepare artifact (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          cd pmproxy/target/${{ matrix.target }}/release
-          Compress-Archive -Path ${{ matrix.artifact }} -DestinationPath pmproxy-${{ matrix.target }}.zip
-          Move-Item pmproxy-${{ matrix.target }}.zip ../../../../
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: pmproxy-${{ matrix.target }}
-          path: pmproxy-${{ matrix.target }}.*
-
   release:
-    name: Create Release
-    needs: build
+    name: Release
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -85,11 +18,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-          merge-multiple: true
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install cross
+        run: cargo install cross --git https://github.com/cross-rs/cross
+
+      - name: Build Linux x86_64
+        working-directory: pmproxy
+        run: |
+          cross build --release --target x86_64-unknown-linux-gnu --features ec2
+          tar -czvf pmproxy-x86_64-unknown-linux-gnu.tar.gz -C target/x86_64-unknown-linux-gnu/release pmproxy
+
+      - name: Build Linux aarch64
+        working-directory: pmproxy
+        run: |
+          cross build --release --target aarch64-unknown-linux-gnu --features ec2
+          tar -czvf pmproxy-aarch64-unknown-linux-gnu.tar.gz -C target/aarch64-unknown-linux-gnu/release pmproxy
 
       - name: Get version from tag
         id: version
@@ -99,5 +44,5 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           name: pmproxy ${{ steps.version.outputs.version }}
-          files: artifacts/*
+          files: pmproxy/pmproxy-*.tar.gz
           generate_release_notes: true
